--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>testing123</title>
+    <title>New Left Review</title>
     <link rel="stylesheet" href="styles/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
